2014-06-10 - v0.3.4

Fixes:

- Removed root as group and replaced with uid 0 to enhance system
compatibility

Enhancements:

- Made package provider a user definable param see
supervisord::package_provider
- All define types can now be automatically pulled in from hiera see example
https://github.com/ajcrowe/puppet-supervisord#configure-a-program

Many thanks for all these from @jasperla


2014-06-06 - v0.3.3

Fixes:

- Fixed typo in stopwaitsec param, should have been stopwaitsecs, thanks to @rchrd2

2014-05-03 - v0.3.2

Changes:

- Added supervisord::executable_ctl variable for supervisorctl binary path, thanks to @bpgoldsb

2014-04-22 - v0.3.1

Fixes:

- Fixed typo in unix_socket_group param, thanks to @dig412

2014-03-11 - v0.3.0

Fixes:

- Fixed typo in fcgi config
- Fixed typo in supervisord config with minfds and minprocs, thanks to @peefourtee
- Typo in README fixed thanks to @hopkinsth
- Removed refreshonly from pip_install exec resource
- Number of syntax fixes thanks to `puppet lint`

Important Changes:

- Lots of input validation has been added **PLEASE** check your config works before upgrading!
- Changed init_extras naming to defaults and cleaned things up.
- Starting and stopping apps is now done with supervisorctl commands to avoid service restarts

Other Changes:

- CSV functions now order things consistently
- Included description for classes and functions
- Expanded spec testing built with Travis CI
- Added beaker acceptance tests
- Added greater validation of various parameters
- Added coverage reporting for resources

To-Do:

- Add support for additional OS families such as Solaris.


2013-10-31 - v0.2.3

Fixes:

- Fixed large bug on debian wheezy where /var/run is changed from a symlink to a 
  directory causing all pids to be inaccessible breaking lots of services


2013-10-30 - v0.2.2

Fixes:

- Fixed syntax error in README examples and tests

2013-10-16 - v0.2.1

Fixes:

- Fixed user params in templates